--- a/index.html
+++ b/index.html
@@ -320,12 +320,12 @@
       <!-- 1: Ahmet Turan Özdemir -->
       <div class="col-lg-6">
         <div class="card-modern speaker-card">
-          <img class="speaker-img" alt="Ahmet Turan Özdemir" src="https://media.licdn.com/dms/image/C4D03AQF/image-profile-ahmet.jpg">
+          <img class="speaker-img" alt="Ahmet Turan Özdemir" src="konusmaci1.jpg">
           <div>
             <div class="speaker-name">Ahmet Turan Özdemir</div>
             <div class="speaker-role">Aspilsan Enerji Genel Müdürü / CEO</div>
             <p class="speaker-bio mb-0">
-              Bilkent Üniversitesi Elektrik-Elektronik Mühendisliği mezunu olan Özdemir, enerji teknolojileri ve savunma sanayii alanında 20 yılı aşkın deneyime sahiptir. ASPİLSAN Enerji’de lityum-iyon batarya teknolojilerinin geliştirilmesine liderlik etmektedir.
+              Bilkent Üniversitesi Elektrik-Elektronik Mühendisliği mezunu. Enerji teknolojileri ve savunma sanayii alanında 20+ yıl deneyim. ASPİLSAN Enerji’de lityum-iyon batarya teknolojilerinin geliştirilmesine liderlik ediyor.
             </p>
           </div>
         </div>
@@ -334,12 +334,12 @@
       <!-- 2: Sabrican Onay Yontar -->
       <div class="col-lg-6">
         <div class="card-modern speaker-card">
-          <img class="speaker-img" alt="Sabrican Onay Yontar" src="https://images.chesscomfiles.com/uploads/v1/user/12345678.abc.jpg">
+          <img class="speaker-img" alt="Sabrican Onay Yontar" src="konusmaci2.jpg">
           <div>
             <div class="speaker-name">Sabrican Onay Yontar</div>
             <div class="speaker-role">Satranç İçerik Üreticisi</div>
             <p class="speaker-bio mb-0">
-              İstanbul Teknik Üniversitesi Uzay Mühendisliği mezunu olan Yontar, Erasmus programıyla Yunanistan’da eğitim görmüştür. Satranç yayıncılığı ve içerik üretimiyle tanınan Yontar, Chess.com ve Twitch üzerinden binlerce takipçiye ulaşmaktadır.
+              İTÜ Uzay Mühendisliği mezunu. Erasmus programıyla Yunanistan’da eğitim gördü. Satranç yayıncılığı ve içerik üretimiyle tanınıyor; Chess.com ve Twitch üzerinden binlerce takipçiye ulaşıyor.
             </p>
           </div>
         </div>
@@ -348,12 +348,12 @@
       <!-- 3: Prof. Dr. Oğuz Yoldaş -->
       <div class="col-lg-6">
         <div class="card-modern speaker-card">
-          <img class="speaker-img" alt="Prof. Dr. Oğuz Yoldaş" src="https://avesis.cu.edu.tr/oguzyoldas/image-profile.jpg">
+          <img class="speaker-img" alt="Prof. Dr. Oğuz Yoldaş" src="konusmaci3.jpg">
           <div>
             <div class="speaker-name">Prof. Dr. Oğuz Yoldaş</div>
             <div class="speaker-role">Çukurova Üniversitesi Dekanı</div>
             <p class="speaker-bio mb-0">
-              Çukurova Üniversitesi Diş Hekimliği Fakültesi Endodonti Anabilim Dalı öğretim üyesi olan Yoldaş, 100’den fazla akademik yayına sahiptir. Fakülte Dekanı olarak bilimsel araştırmaları ve genç diş hekimlerinin yetişmesini desteklemektedir.
+              ÇÜ Diş Hekimliği Fakültesi Endodonti Anabilim Dalı öğretim üyesi. 100’den fazla akademik yayına sahip. Fakülte Dekanı olarak bilimsel araştırmaları ve genç diş hekimlerinin yetişmesini destekliyor.
             </p>
           </div>
         </div>
@@ -362,12 +362,12 @@
       <!-- 4: Seda Saygı Aktaş -->
       <div class="col-lg-6">
         <div class="card-modern speaker-card">
-          <img class="speaker-img" alt="Seda Saygı Aktaş" src="https://media.licdn.com/dms/image/C4D03AQF/image-profile-seda.jpg">
+          <img class="speaker-img" alt="Seda Saygı Aktaş" src="konusmaci4.jpg">
           <div>
             <div class="speaker-name">Seda Saygı Aktaş</div>
             <div class="speaker-role">A320 Pilotu / Bilgisayar Mühendisi</div>
             <p class="speaker-bio mb-0">
-              Sakarya Üniversitesi Bilgisayar Mühendisliği mezunu olan Aktaş, Pegasus Airlines’ta A320 First Officer olarak görev yapmaktadır. Havacılık tutkusunu mühendislik altyapısıyla birleştirerek genç kadın pilotlara ilham vermektedir.
+              Sakarya Üniversitesi Bilgisayar Mühendisliği mezunu. Pegasus Airlines’ta A320 First Officer. Havacılık tutkusunu mühendislik altyapısıyla birleştirerek genç kadın pilotlara ilham veriyor.
             </p>
           </div>
         </div>
@@ -376,12 +376,12 @@
       <!-- 5: İlker Yörü -->
       <div class="col-lg-6">
         <div class="card-modern speaker-card">
-          <img class="speaker-img" alt="İlker Yörü" src="https://media.licdn.com/dms/image/C4D03AQF/image-profile-ilker.jpg">
+          <img class="speaker-img" alt="İlker Yörü" src="konusmaci5.jpg">
           <div>
             <div class="speaker-name">İlker Yörü</div>
             <div class="speaker-role">Co-Founder / Bilgisayar Mühendisi</div>
             <p class="speaker-bio mb-0">
-              Koç Üniversitesi Bilgisayar Bilimleri ve Ekonomi mezunu olan Yörü, Mindra’nın kurucu ortağı ve CTO’sudur. Bosch Türkiye’de veri mühendisliği ve yazılım geliştirme deneyimiyle teknoloji ve girişimcilik alanında öne çıkmaktadır.
+              Koç Üniversitesi Bilgisayar Bilimleri ve Ekonomi mezunu. Mindra’nın kurucu ortağı ve CTO’su. Bosch Türkiye’de veri mühendisliği ve yazılım geliştirme deneyimiyle teknoloji ve girişimcilik alanında öne çıkıyor.
             </p>
           </div>
         </div>
@@ -390,12 +390,12 @@
       <!-- 6: Prof. Dr. Orhan Görgülü -->
       <div class="col-lg-6">
         <div class="card-modern speaker-card">
-          <img class="speaker-img" alt="Prof. Dr. Orhan Görgülü" src="https://profdrorhangorgulu.com/images/orhan-gorgulu-profile.jpg">
+          <img class="speaker-img" alt="Prof. Dr. Orhan Görgülü" src="konusmaci6.png">
           <div>
             <div class="speaker-name">Prof. Dr. Orhan Görgülü</div>
             <div class="speaker-role">KBB Uzmanı</div>
             <p class="speaker-bio mb-0">
-              Hacettepe Üniversitesi Tıp Fakültesi mezunu olan Görgülü, Ankara Numune ve Adana Numune Hastanelerinde görev yapmıştır. Sağlık Bilimleri Üniversitesi Adana Şehir Eğitim ve Araştırma Hastanesi’nde profesör olarak KBB alanında hizmet vermektedir.
+              Hacettepe Üniversitesi Tıp Fakültesi mezunu. Ankara ve Adana Numune Hastanelerinde görev yaptı. Adana Şehir Eğitim ve Araştırma Hastanesi’nde profesör olarak KBB alanında hizmet veriyor.
             </p>
           </div>
         </div>
