--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
       <!-- İlk satır -->
       <div class="col-lg-6">
         <div class="card-modern p-4 h-100">
-          <div class="team-group-title mb-2">Organizatör</div>
+          <div class="team-group-title mb-2">Organizator</div>
           <div class="team-list" style="grid-template-columns: 1fr;">
             <div class="team-pill">Alya Erteni</div>
           </div>
@@ -472,7 +472,7 @@
       </div>
       <div class="col-lg-6">
         <div class="card-modern p-4 h-100">
-          <div class="team-group-title mb-2">Co‑Organizatör</div>
+          <div class="team-group-title mb-2">Co‑Organizator</div>
           <div class="team-list" style="grid-template-columns: 1fr;">
             <div class="team-pill">Ömer Raif Özoğlu</div>
           </div>
