--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       <div class="col-lg-7">
 
         <!-- Büyük TEDx Logo -->
-        <div class="mb-4 text-center">
+        <div class="d-flex gap-2">
           <img src="bigtedx.png" alt="TEDx Adana Fen Logo" style="max-width:50%; height:auto;">
         </div>
 
