--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             <div class="col-md-6">
               <div class="card-modern p-4 h-100">
                 <div class="section-kicker mb-2">Hakkımızda</div>
-                <p>Fikir. Dönüşüm. Gelecek. Adana Fen Lisesi öğrencileri ve topluluğu tarafından organize edilen TEDx, okulumuzun entelektüel merakını sahneye taşıyor.
+                <p>Fikir. Dönüşüm. Gelecek.</p>
                 <p>Adana Fen Lisesi öğrencileri ve topluluğu tarafından organize edilen TEDx, okulumuzun entelektüel merakını sahneye taşıyor.</p>
                 <p>Bu platformda, düşünce kalıplarını zorlayan, tartışmaya değer ve ilham veren konuşmacıları ağırlıyoruz. Bilim, teknoloji ve kişisel gelişime uzanan bir yelpazede, konulara farklı açılardan yaklaşan konuşmalar dinleyeceksiniz.</p>
               </div>
