--- a/index.html
+++ b/index.html
@@ -466,63 +466,36 @@
     <h2 class="section-title mb-4">Organizasyon Ekibi</h2>
 
     <div class="row g-4">
-      <!-- İlk satır -->
-      <div class="col-lg-6">
-        <div class="card-modern p-4 h-100">
-          <div class="team-group-title mb-2">Organizator</div>
-          <div class="team-list" style="grid-template-columns: 1fr;">
-            <div class="team-pill">Alya Erteni</div>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-6">
-        <div class="card-modern p-4 h-100">
-          <div class="team-group-title mb-2">Co‑Organizator</div>
-          <div class="team-list" style="grid-template-columns: 1fr;">
-            <div class="team-pill">Ömer Raif Özoğlu</div>
-          </div>
-        </div>
-      </div>
 
       <!-- İkinci satır -->
       <div class="col-lg-4">
         <div class="card-modern p-4 h-100">
-          <div class="team-group-title mb-2">Media Team</div>
+          <div class="team-group-title mb-2">Organizatör</div>
           <div class="team-list" style="grid-template-columns: repeat(2, 1fr);">
             <!-- İlk satır: tek kişi ortalanmış -->
+            <div class="team-pill" style="grid-column: span 2; text-align:center;">Alya Erteni</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4">
+        <div class="card-modern p-4 h-100">
+          <div class="team-group-title mb-2">Co-Organizatör</div>
+          <div class="team-list" style="grid-template-columns: repeat(2, 1fr);">
+            <div class="team-pill" style="grid-column: span 2; text-align:center;">Ömer Raif Özoğlu</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4">
+        <div class="card-modern p-4 h-100">
+          <div class="team-group-title mb-2">Ana Kadro</div>
+          <div class="team-list" style="grid-template-columns: repeat(2, 1fr);">
             <div class="team-pill" style="grid-column: span 2; text-align:center;">Mehmet Ulaç Girgin</div>
-            <!-- İkinci satır -->
-            <div class="team-pill">Elif Su Özdemir</div>
-            <div class="team-pill">Kuzey Çelik</div>
-            <!-- Üçüncü satır -->
-            <div class="team-pill">Yusuf Batuhan Gül</div>
-            <div class="team-pill">Buğlem Nisan Ekinci</div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-4">
-        <div class="card-modern p-4 h-100">
-          <div class="team-group-title mb-2">Event Team</div>
-          <div class="team-list" style="grid-template-columns: repeat(2, 1fr);">
-            <div class="team-pill" style="grid-column: span 2; text-align:center;">Zehra Çaldır</div>
-            <div class="team-pill">İkranur Aydın</div>
-            <div class="team-pill">Alper Kırsay</div>
-            <div class="team-pill">Sena Önerden</div>
-            <div class="team-pill">Duru Hirasu Körkün</div>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-4">
-        <div class="card-modern p-4 h-100">
-          <div class="team-group-title mb-2">Treasure Team</div>
-          <div class="team-list" style="grid-template-columns: repeat(2, 1fr);">
-            <div class="team-pill" style="grid-column: span 2; text-align:center;">Sude Söğütlü</div>
-            <div class="team-pill">Yusuf Tuna Ceylan</div>
+            <div class="team-pill">Sude Söğütlü</div>
             <div class="team-pill">Ali Bera Mert</div>
-            <div class="team-pill">Umut Devrim Deveci</div>
-            <div class="team-pill">Berat Hüseyin Güllü</div>
+            <div class="team-pill">Yusuf Tuna Ceylan</div>
+            <div class="team-pill">Alper Kırsay</div>
           </div>
         </div>
       </div>
