--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
         <div class="card-modern p-4 h-100">
           <div class="team-group-title mb-2">Organizatör</div>
           <div class="team-list" style="grid-template-columns: repeat(2, 1fr);">
-            <div class="team-pill" style="grid-column: span 2; text-align:center; border:1px solid #e62b1e;">
+            <div class="team-pill" style="grid-column: span 2; text-align:center; border:1px solid #300808;">
               Alya Erteni
             </div>
           </div>
@@ -484,7 +484,7 @@
         <div class="card-modern p-4 h-100">
           <div class="team-group-title mb-2">Co-Organizatör</div>
           <div class="team-list" style="grid-template-columns: repeat(2, 1fr);">
-            <div class="team-pill" style="grid-column: span 2; text-align:center; border:1px solid #28a745;">
+            <div class="team-pill" style="grid-column: span 2; text-align:center; border:1px solid #092620;">
               Ömer Raif Özoğlu
             </div>
           </div>
@@ -499,10 +499,10 @@
             <div class="team-pill" style="grid-column: span 2; text-align:center; border:1px solid #007bff;">
               Mehmet Ulaç Girgin
             </div>
-            <div class="team-pill" style="border:2px solid #007bff;">Sude Söğütlü</div>
-            <div class="team-pill" style="border:2px solid #007bff;">Ali Bera Mert</div>
-            <div class="team-pill" style="border:2px solid #007bff;">Yusuf Tuna Ceylan</div>
-            <div class="team-pill" style="border:2px solid #007bff;">Alper Kırsay</div>
+            <div class="team-pill" style="border:1px solid #007bff;">Sude Söğütlü</div>
+            <div class="team-pill" style="border:1px solid #007bff;">Ali Bera Mert</div>
+            <div class="team-pill" style="border:1px solid #007bff;">Yusuf Tuna Ceylan</div>
+            <div class="team-pill" style="border:1px solid #007bff;">Alper Kırsay</div>
           </div>
         </div>
       </div>
