--- a/index.html
+++ b/index.html
@@ -496,13 +496,13 @@
         <div class="card-modern p-4 h-100">
           <div class="team-group-title mb-2">Ana Kadro</div>
           <div class="team-list" style="grid-template-columns: repeat(2, 1fr);">
-            <div class="team-pill" style="grid-column: span 2; text-align:center; border:1px solid #007bff;">
+            <div class="team-pill" style="grid-column: span 2; text-align:center; border:1px solid #0f2038;">
               Mehmet Ulaç Girgin
             </div>
-            <div class="team-pill" style="border:1px solid #007bff;">Sude Söğütlü</div>
-            <div class="team-pill" style="border:1px solid #007bff;">Ali Bera Mert</div>
-            <div class="team-pill" style="border:1px solid #007bff;">Yusuf Tuna Ceylan</div>
-            <div class="team-pill" style="border:1px solid #007bff;">Alper Kırsay</div>
+            <div class="team-pill" style="border:1px solid #0f2038;">Sude Söğütlü</div>
+            <div class="team-pill" style="border:1px solid #0f2038;">Ali Bera Mert</div>
+            <div class="team-pill" style="border:1px solid #0f2038;">Yusuf Tuna Ceylan</div>
+            <div class="team-pill" style="border:1px solid #0f2038;">Alper Kırsay</div>
           </div>
         </div>
       </div>
@@ -510,7 +510,7 @@
 
     <!-- Diğer Üyeler (kutu dışında) -->
     <div class="mt-4">
-      <h5 class="text-white fw-bold mb-3">Genel Üyeler</h5>
+      <h5 class="text-white fw-bold mb-3">Genel Kadro</h5>
       <p class="muted">
         Zehra Çaldır - Elif Su Özdemir - Umut Devrim Deveci - Kuzey Çelik - Yusuf Batuhan Gül -  İkranur Aydın - Alper Kırsay - Sena Önerden - Duru Hirasu Körkün - Buğlem Nisan Ekinci - Yavuz Emin Kaya - Berat Hüseyin Güllü
       </p>
