--- a/index.html
+++ b/index.html
@@ -440,14 +440,12 @@
             <a href="https://adanafenlisesi.meb.k12.tr/" target="_blank" class="badge rounded-pill mb-2 text-decoration-none">
               Konum • Adana
             </a>
-            <p class="mb-2">Adana Fen Lisesi, kurulduğu günden bu yana Türkiye’nin bilim, kültür ve eğitim alanındaki en köklü kurumlarından biri olarak genç nesillere ilham veren bir eğitim geleneği oluşturmuştur. Taş bina mimarisi, doğal kampüsü ve tarihi dokusuyla okul, yalnızca bir eğitim yuvası değil; aynı zamanda bilimsel merakın, sorgulamanın ve özgün düşüncenin yaşam bulduğu bir mekândır. Bu kültür, yıllar boyunca hem akademik başarılarıyla hem de yetiştirdiği nitelikli bireylerle güçlenerek devam etmiştir.</p>
-            <p class="mb-2">Bu nedenle Adana Fen Lisesi, bir TEDx etkinliğinin ruhunu taşıyabilecek en doğru yerlerden biridir. Okul, bilimsel düşünceyi merkezine alan eğitim anlayışıyla, TED’in savunduğu "fikirlerin gücüyle dünyayı dönüştürme" vizyonuyla doğal bir uyum içindedir. Yıllar boyunca ulusal ve uluslararası yarışmalarda elde edilen başarılar, okulun yenilikçi zihniyeti ve üretken ortamının somut göstergeleridir. Bu atmosfer, TEDx konuşmalarının ihtiyaç duyduğu entelektüel enerjiyi doğal olarak besler.</p>
-            <p class="mb-2">TEDx Adana Fen’in bu kampüste düzenlenmesi, okulun tarihsel kimliği ile modern düşünce akımlarının buluştuğu özel bir kesişim noktası oluşturur. Taş binanın tarihi mimarisiyle birleşen genç zihinlerin yenilikçi fikirleri, etkinliğe hem estetik hem de duygusal bir derinlik katar. Böylece Adana Fen Lisesi, sadece bir mekân değil; fikrin, bilginin ve ilhamın hayat bulduğu benzersiz bir sahne hâline gelir.</p>
+            <p class="mb-2">Adana Fen Lisesi, taş bina mimarisi ve köklü eğitim geleneğiyle yalnızca bir okul değil; bilimsel merakın, sorgulamanın ve özgün düşüncenin hayat bulduğu bir sahnedir. Ulusal ve uluslararası başarılarla güçlenen bu kültür, TED’in “fikirlerin gücüyle dünyayı dönüştürme” vizyonuyla doğal bir uyum içindedir. TEDx Adana Fen, tarihi dokuyla birleşen genç zihinlerin yenilikçi fikirlerini buluşturarak, ilhamın ve bilginin ışığını geleceğe taşıyan benzersiz bir etkinliktir.</p>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="card-modern p-0 h-100">
-            <img src="adanafenlisesi.png" alt="Adana Fen Lisesi" class="img-fluid rounded-3">
+            <img src="adanafenlisesi.png" alt="Adana Fen Lisesi" class="img-fluid rounded- style="max-width:50%; height:auto;">
           </div>
         </div>
       </div>
