--- a/index.html
+++ b/index.html
@@ -184,7 +184,8 @@
           <div>
             <div class="d-flex align-items-center justify-content-between">
               <span class="section-kicker">Etkinlik Özeti</span>
-              <span class="badge text-bg-dark border">21 Aralık 2025</span>
+              <span class="fw-bold text-white fs-3">21 Aralık 2025</span>
+            </div>
             </div>
             <div class="divider my-3"></div>
             <div class="row text-center g-3">
