--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
             </div>
             <div class="speaker-role">Aspilsan Enerji Genel Müdürü / CEO</div>
             <p class="speaker-bio mb-0">
-              Bilkent Üniversitesi Elektrik-Elektronik Mühendisliği mezunu. Enerji teknolojileri ve savunma sanayii alanında 20+ yıl deneyim.
+              Enerji sistemleri, elektronik mühendisliği ve teknoloji yönetimi konularındaki derin tecrübesiyle geleceğin teknolojilerine yön veren isimlerden biridir.
             </p>
           </div>
         </div>
@@ -346,7 +346,7 @@
             </div>
             <div class="speaker-role">Satranç İçerik Üreticisi</div>
             <p class="speaker-bio mb-0">
-              İTÜ Uzay Mühendisliği mezunu. Satranç yayıncılığı ve içerik üretimiyle tanınıyor; Chess.com ve Twitch üzerinden binlerce takipçiye ulaşıyor. YouTube +330B Abone
+              İTÜ Uzay Mühendisliği mezunudur. Satranç yayıncılığı ve içerik üretimiyle tanınıyor; Chess.com üzerinden binlerce takipçiye ulaşıyor. (YouTube +330B Abone)
             </p>
           </div>
         </div>
@@ -364,7 +364,7 @@
             </div>
             <div class="speaker-role">Çukurova Üniversitesi Dekanı</div>
             <p class="speaker-bio mb-0">
-              ÇÜ Diş Hekimliği Fakültesi Endodonti Anabilim Dalı öğretim üyesi. 100’den fazla akademik yayına sahip. Fakülte Dekanı olarak bilimsel araştırmaları ve genç diş hekimlerinin yetişmesini destekliyor.
+               Fakülte Dekanı olarak bilimsel araştırmaları ve genç hekimlerinin yetişmesini desteklemektedir, aynı zamanda endodonti anabilim dalı başkanıdır.
             </p>
           </div>
         </div>
@@ -382,7 +382,7 @@
             </div>
             <div class="speaker-role">A320 Pilotu / Bilgisayar Mühendisi</div>
             <p class="speaker-bio mb-0">
-              Sakarya Üniversitesi Bilgisayar Mühendisliği mezunu. Pegasus Airlines’ta A320 First Officer. Havacılık tutkusunu mühendislik altyapısıyla birleştirerek genç kadın pilotlara ilham veriyor.
+              Pegasus Airlines’ta A320 First Officer. Havacılık tutkusunu mühendislik altyapısıyla birleştirerek genç kadın pilotlara ilham veriyor.
             </p>
           </div>
         </div>
@@ -400,7 +400,7 @@
             </div>
             <div class="speaker-role">Co-Founder / Bilgisayar Mühendisi</div>
             <p class="speaker-bio mb-0">
-              Koç Üniversitesi Bilgisayar Bilimleri ve Ekonomi mezunu. Mindra’nın kurucu ortağı ve CTO’su. Bosch Türkiye’de veri mühendisliği ve yazılım geliştirme deneyimiyle teknoloji ve girişimcilik alanında öne çıkıyor.
+              Koç Üniversitesi Bilgisayar Mühendisliği & Ekonomi mezunu. 1.2 Milyon Dolar yatırım alan yapay zeka şirketi Mindra’nın kurucu ortağı ve CTO’su. 
             </p>
           </div>
         </div>
@@ -418,7 +418,7 @@
             </div>
             <div class="speaker-role">KBB Uzmanı</div>
             <p class="speaker-bio mb-0">
-              Hacettepe Üniversitesi Tıp Fakültesi mezunu. Ankara ve Adana Numune Hastanelerinde görev yaptı. Adana Şehir Eğitim ve Araştırma Hastanesi’nde profesör olarak KBB alanında hizmet veriyor.
+              Hacettepe Üniversitesi Tıp Fakültesi mezunu.  Adana Şehir Eğitim ve Araştırma Hastanesi’nde profesör olarak KBB alanında hizmet veriyor.
             </p>
           </div>
         </div>
