--- a/index.html
+++ b/index.html
@@ -446,16 +446,14 @@
           </p>
         </div>
       </div>
-      <div class="col-lg-4">
-        <div class="card-modern p-0 h-100 text-center">
-          <!-- Yeni resim -->
-          <img src="image.png" alt="TEDx Mekan Görseli" class="img-fluid rounded" style="max-width:60%; height:auto;">
-        </div>
+      <div class="col-lg-4 text-center">
+        <!-- Sadece küçük logo -->
+        <img src="image.png" alt="AFL Logo" class="img-fluid" style="max-width:120px; height:auto;">
       </div>
     </div>
   </div>
 </section>
-
+  
 <!-- Kadro -->
 <section id="kadro" class="section">
   <div class="container">
