--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
           </div>
           <!-- Butonlar en alta taşındı -->
           <div class="mt-4 d-flex gap-2 justify-content-center">
-            <a href="#program" class="btn btn-brand btn-lg px-4">Programı Gör</a>
+            <a href="#program" class="btn btn-brand btn-lg px-4">Program</a>
             <a href="#konusmacilar" class="btn btn-outline-light btn-lg px-4">Konuşmacılar</a>
           </div>
         </div>
