--- a/index.html
+++ b/index.html
@@ -140,6 +140,12 @@
 </head>
 <body>
 
+<head>
+  <meta charset="UTF-8">
+  <title>TEDx Adana Fen</title>
+  <link rel="icon" type="image/png" href="favicon.png">
+</head>
+
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg fixed-top">
   <div class="container">
@@ -335,6 +341,7 @@
       </div>
 
       <!-- 2: Sabrican Onay Yontar -->
+       <!--
       <div class="col-lg-6">
         <div class="card-modern speaker-card">
           <img class="speaker-img" alt="Sabrican Onay Yontar" src="konusmaci2.jpg">
@@ -351,6 +358,7 @@
           </div>
         </div>
       </div>
+       -->
 
       <!-- 3: Prof. Dr. Oğuz Yoldaş -->
       <div class="col-lg-6">
