--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>TEDx Adana Fen</title>
+
+    <!-- Favicon -->
+  <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32">
+  <link rel="apple-touch-icon" href="/favicon.png">
+</head>
+<body>
+  <h1>Hoş geldiniz TEDx Adana Fen</h1>
+</body>
+</html>
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     :root {
@@ -140,12 +150,6 @@
 </head>
 <body>
 
-<head>
-  <meta charset="UTF-8">
-  <title>TEDx Adana Fen</title>
-  <link rel="icon" type="image/png" href="favicon.png">
-</head>
-
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg fixed-top">
   <div class="container">
@@ -196,7 +200,7 @@
             <div class="divider my-3"></div>
             <div class="row text-center g-3">
               <div class="col-4">
-                <div class="h4 fw-bold">6</div>
+                <div class="h4 fw-bold">5</div>
                 <div class="muted">Konuşma</div>
               </div>
               <div class="col-4">
@@ -296,10 +300,12 @@
               <div class="fw-bold">Konuşma 5</div>
               <div class="tl-time">15:25 - 15:45</div>
             </div>
+            <!--
             <div class="tl-item d-flex justify-content-between">
               <div class="fw-bold">Konuşma 6</div>
               <div class="tl-time">15:50 - 16:10</div>
             </div>
+            -->
             <div class="tl-item d-flex justify-content-between">
               <div class="fw-bold">Kapanış</div>
               <div class="tl-time">16:10 - 16:30</div>
