--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
     <div class="mt-4">
       <h5 class="text-white fw-bold mb-3">Genel Kadro</h5>
       <p class="muted">
-        Zehra Çaldır - Elif Su Özdemir - Umut Devrim Deveci - Kuzey Çelik - Yusuf Batuhan Gül -  İkranur Aydın - Alper Kırsay - Sena Önerden - Duru Hirasu Körkün - Buğlem Nisan Ekinci - Yavuz Emin Kaya - Berat Hüseyin Güllü
+        Zehra Çaldır - Elif Su Özdemir - Umut Devrim Deveci - Kuzey Çelik - Yusuf Batuhan Gül -  İkra Nur Aydın - Alper Kırsay - Sena Önerden - Duru Hirasu Körkün - Buğlem Nisan Ekinci - Yavuz Emin Kaya - Berat Hüseyin Güllü
       </p>
     </div>
   </div>
