--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
       <!-- 1: Ahmet Turan Özdemir -->
       <div class="col-lg-6">
         <div class="card-modern speaker-card">
-          <img class="speaker-img" alt="Ahmet Turan Özdemir" src="konusmaci1.jpg">
+          <img class="speaker-img" alt="Ahmet Turan Özdemir 🔗" src="konusmaci1.jpg">
           <div>
             <div class="speaker-name">
               <a href="https://www.linkedin.com/in/ahmet-turan-özdemir" target="_blank" class="link-light text-decoration-none">
@@ -369,7 +369,7 @@
        <!--
       <div class="col-lg-6">
         <div class="card-modern speaker-card">
-          <img class="speaker-img" alt="Sabrican Onay Yontar" src="konusmaci2.jpg">
+          <img class="speaker-img" alt="Sabrican Onay Yontar 🔗" src="konusmaci2.jpg">
           <div>
             <div class="speaker-name">
               <a href="https://www.linkedin.com/in/sabrican-onay-yontar" target="_blank" class="link-light text-decoration-none">
@@ -388,7 +388,7 @@
       <!-- 3: Prof. Dr. Oğuz Yoldaş -->
       <div class="col-lg-6">
         <div class="card-modern speaker-card">
-          <img class="speaker-img" alt="Prof. Dr. Oğuz Yoldaş" src="konusmaci3.jpg">
+          <img class="speaker-img" alt="Prof. Dr. Oğuz Yoldaş 🔗" src="konusmaci3.jpg">
           <div>
             <div class="speaker-name">
               <a href="https://www.linkedin.com/in/oğuz-yoldaş" target="_blank" class="link-light text-decoration-none">
@@ -406,7 +406,7 @@
       <!-- 4: Seda Saygı Aktaş -->
       <div class="col-lg-6">
         <div class="card-modern speaker-card">
-          <img class="speaker-img" alt="Seda Saygı Aktaş" src="konusmaci4.jpg">
+          <img class="speaker-img" alt="Seda Saygı Aktaş 🔗" src="konusmaci4.jpg">
           <div>
             <div class="speaker-name">
               <a href="https://www.linkedin.com/in/seda-saygi-aktas" target="_blank" class="link-light text-decoration-none">
@@ -424,7 +424,7 @@
       <!-- 5: İlker Yörü -->
       <div class="col-lg-6">
         <div class="card-modern speaker-card">
-          <img class="speaker-img" alt="İlker Yörü" src="konusmaci5.jpg">
+          <img class="speaker-img" alt="İlker Yörü 🔗" src="konusmaci5.jpg">
           <div>
             <div class="speaker-name">
               <a href="https://www.linkedin.com/in/ilker-yoru" target="_blank" class="link-light text-decoration-none">
@@ -442,7 +442,7 @@
       <!-- 6: Prof. Dr. Orhan Görgülü -->
       <div class="col-lg-6">
         <div class="card-modern speaker-card">
-          <img class="speaker-img" alt="Prof. Dr. Orhan Görgülü" src="konusmaci6.png">
+          <img class="speaker-img" alt="Prof. Dr. Orhan Görgülü 🔗" src="konusmaci6.png">
           <div>
             <div class="speaker-name">
               <a href="https://www.linkedin.com/in/orhan-gorgulu" target="_blank" class="link-light text-decoration-none">
