--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         </div>
 
           <h1 class="display-5 fw-bold" style="color:#e62b1e;">
-            LIGHTS ON ! <br>
+            BACK TO FUTURE <br>
           </h1>
 
       </div>
@@ -350,11 +350,11 @@
       <!-- 1: Ahmet Turan Özdemir -->
       <div class="col-lg-6">
         <div class="card-modern speaker-card">
-          <img class="speaker-img" alt="Ahmet Turan Özdemir 🔗" src="konusmaci1.jpg">
+          <img class="speaker-img" alt="Ahmet Turan Özdemir" src="konusmaci1.jpg">
           <div>
             <div class="speaker-name">
               <a href="https://www.linkedin.com/in/ahmet-turan-özdemir" target="_blank" class="link-light text-decoration-none">
-                Ahmet Turan Özdemir
+                Ahmet Turan Özdemir 🔗
               </a>
             </div>
             <div class="speaker-role">Aspilsan Enerji Genel Müdürü / CEO</div>
@@ -369,11 +369,11 @@
        <!--
       <div class="col-lg-6">
         <div class="card-modern speaker-card">
-          <img class="speaker-img" alt="Sabrican Onay Yontar 🔗" src="konusmaci2.jpg">
+          <img class="speaker-img" alt="Sabrican Onay Yontar" src="konusmaci2.jpg">
           <div>
             <div class="speaker-name">
               <a href="https://www.linkedin.com/in/sabrican-onay-yontar" target="_blank" class="link-light text-decoration-none">
-                Sabrican Onay Yontar
+                Sabrican Onay Yontar 🔗
               </a>
             </div>
             <div class="speaker-role">Satranç İçerik Üreticisi</div>
@@ -388,11 +388,11 @@
       <!-- 3: Prof. Dr. Oğuz Yoldaş -->
       <div class="col-lg-6">
         <div class="card-modern speaker-card">
-          <img class="speaker-img" alt="Prof. Dr. Oğuz Yoldaş 🔗" src="konusmaci3.jpg">
+          <img class="speaker-img" alt="Prof. Dr. Oğuz Yoldaş" src="konusmaci3.jpg">
           <div>
             <div class="speaker-name">
               <a href="https://www.linkedin.com/in/oğuz-yoldaş" target="_blank" class="link-light text-decoration-none">
-                Prof. Dr. Oğuz Yoldaş
+                Prof. Dr. Oğuz Yoldaş 🔗
               </a>
             </div>
             <div class="speaker-role">Çukurova Üniversitesi - Dekan</div>
@@ -406,11 +406,11 @@
       <!-- 4: Seda Saygı Aktaş -->
       <div class="col-lg-6">
         <div class="card-modern speaker-card">
-          <img class="speaker-img" alt="Seda Saygı Aktaş 🔗" src="konusmaci4.jpg">
+          <img class="speaker-img" alt="Seda Saygı Aktaş" src="konusmaci4.jpg">
           <div>
             <div class="speaker-name">
               <a href="https://www.linkedin.com/in/seda-saygi-aktas" target="_blank" class="link-light text-decoration-none">
-                Seda Saygı Aktaş
+                Seda Saygı Aktaş 🔗
               </a>
             </div>
             <div class="speaker-role">A320 Pilotu / Bilgisayar Mühendisi</div>
@@ -424,11 +424,11 @@
       <!-- 5: İlker Yörü -->
       <div class="col-lg-6">
         <div class="card-modern speaker-card">
-          <img class="speaker-img" alt="İlker Yörü 🔗" src="konusmaci5.jpg">
+          <img class="speaker-img" alt="İlker Yörü" src="konusmaci5.jpg">
           <div>
             <div class="speaker-name">
               <a href="https://www.linkedin.com/in/ilker-yoru" target="_blank" class="link-light text-decoration-none">
-                İlker Yörü
+                İlker Yörü 🔗
               </a>
             </div>
             <div class="speaker-role">Co-Founder / Bilgisayar Mühendisi</div>
@@ -442,11 +442,11 @@
       <!-- 6: Prof. Dr. Orhan Görgülü -->
       <div class="col-lg-6">
         <div class="card-modern speaker-card">
-          <img class="speaker-img" alt="Prof. Dr. Orhan Görgülü 🔗" src="konusmaci6.png">
+          <img class="speaker-img" alt="Prof. Dr. Orhan Görgülü" src="konusmaci6.png">
           <div>
             <div class="speaker-name">
               <a href="https://www.linkedin.com/in/orhan-gorgulu" target="_blank" class="link-light text-decoration-none">
-                Prof. Dr. Orhan Görgülü
+                Prof. Dr. Orhan Görgülü 🔗
               </a>
             </div>
             <div class="speaker-role">KBB Uzmanı</div>
