--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
       <div class="col-lg-8">
         <div class="card-modern p-4 venue-card h-100">
           <a href="https://adanafenlisesi.meb.k12.tr/" target="_blank" class="badge rounded-pill mb-2 text-decoration-none">
-            Konum • Adana
+            🔗 Konum • Adana
           </a>
           <p class="mb-2">
             Adana Fen Lisesi, taş bina mimarisi ve köklü eğitim geleneğiyle yalnızca bir okul değil; bilimsel merakın, sorgulamanın ve özgün düşüncenin hayat bulduğu bir sahnedir. Ulusal ve uluslararası başarılarla güçlenen bu kültür, TED’in “fikirlerin gücüyle dünyayı dönüştürme” vizyonuyla doğal bir uyum içindedir. TEDx Adana Fen, tarihi dokuyla birleşen genç zihinlerin yenilikçi fikirlerini buluşturarak, ilhamın ve bilginin ışığını geleceğe taşıyan benzersiz bir etkinliktir.
@@ -492,7 +492,10 @@
   <div class="container">
     <div class="d-flex align-items-center gap-3 mb-2">
       <span class="section-kicker">Kadro</span>
-      <span class="badge text-bg-dark border">TEDx</span>
+      <a href="https://www.ted.com/tedx/events/63622" target="_blank" 
+         class="badge text-bg-dark border">
+        🔗 TEDx Lisansı
+      </a>
     </div>
 
     <!-- Büyük Beyaz Başlık -->
@@ -545,12 +548,12 @@
     <div class="mt-4">
       <h5 class="text-white fw-bold mb-3">Genel Kadro</h5>
       <p class="muted">
-        Zehra Çaldır - Elif Su Özdemir - Umut Devrim Deveci - Kuzey Çelik - Yusuf Batuhan Gül -  İkra Nur Aydın - Alper Kırsay - Sena Önerden - Duru Hirasu Körkün - Buğlem Nisan Ekinci - Yavuz Emin Kaya - Berat Hüseyin Güllü
+        Zehra Çaldır - Elif Su Özdemir - Umut Devrim Deveci - Kuzey Çelik - Yusuf Batuhan Gül - İkra Nur Aydın - Alper Kırsay - Sena Önerden - Duru Hirasu Körkün - Buğlem Nisan Ekinci - Yavuz Emin Kaya - Berat Hüseyin Güllü
       </p>
     </div>
   </div>
 </section>
-
+  
   <!-- İletişim -->
   <section id="iletisim" class="section">
     <div class="container">
