--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
           <div class="d-flex align-items-center gap-3 mb-2">
             <span class="section-kicker">Hakkımızda</span>
             <a href="https://www.ted.com/tedx/events/63622" target="_blank" 
-                class="badge text-bg-dark border">
+               class="badge text-bg-dark border text-decoration-none">
               🔗 TEDx Lisansı
             </a>
           </div>
@@ -427,7 +427,7 @@
       <!-- 5: İlker Yörü -->
       <div class="col-lg-6">
         <div class="card-modern speaker-card">
-          <img class="speaker-img" alt="İlker Yörü" src="konusmaci5.jpg">
+          <img class="speaker-img" alt="İlker Yörü" src="konusmaci5.jpeg">
           <div>
             <div class="speaker-name">
               <a href="https://www.linkedin.com/in/ilker-yoru" target="_blank" class="link-light text-decoration-none">
@@ -500,7 +500,7 @@
     <div class="d-flex align-items-center gap-3 mb-2">
       <span class="section-kicker">Kadro</span>
       <a href="https://www.ted.com/tedx/events/63622" target="_blank" 
-          class="badge text-bg-dark border">
+         class="badge text-bg-dark border text-decoration-none">
         🔗 TEDx Lisansı
       </a>
     </div>
