--- a/index.html
+++ b/index.html
@@ -378,15 +378,15 @@
               <div class="tl-time">13:00 - 13:15</div>
             </div>
             <div class="tl-item d-flex justify-content-between">
-              <div class="fw-bold">Konuşma 1</div>
+              <div class="fw-bold">1. Konuşma - Prof. Dr. Mehmet Birhan Yılmaz</div>
               <div class="tl-time">13:15 - 13:35</div>
             </div>
             <div class="tl-item d-flex justify-content-between">
-              <div class="fw-bold">Konuşma 2</div>
+              <div class="fw-bold">2. Konuşma - Ahmet Turan Özdemir</div>
               <div class="tl-time">13:40 - 14:00</div>
             </div>
             <div class="tl-item d-flex justify-content-between">
-              <div class="fw-bold">Konuşma 3</div>
+              <div class="fw-bold">3. Konuşma - İlker Yörü</div>
               <div class="tl-time">14:05 - 14:25</div>
             </div>
             <div class="tl-item d-flex justify-content-between">
@@ -394,15 +394,15 @@
               <div class="tl-time">14:25 - 15:00</div>
             </div>
             <div class="tl-item d-flex justify-content-between">
-              <div class="fw-bold">Konuşma 4</div>
+              <div class="fw-bold">4. Konuşma - Prof. Dr. Oğuz Yoldaş</div>
               <div class="tl-time">15:00 - 15:20</div>
             </div>
             <div class="tl-item d-flex justify-content-between">
-              <div class="fw-bold">Konuşma 5</div>
+              <div class="fw-bold">5. Konuşma - Prof. Dr. Orhan Görgülü</div>
               <div class="tl-time">15:25 - 15:45</div>
             </div>
             <div class="tl-item d-flex justify-content-between">
-              <div class="fw-bold">Konuşma 6</div>
+              <div class="fw-bold">6. Konuşma - Seda Saygı Aktaş</div>
               <div class="tl-time">15:50 - 16:10</div>
             </div>
             <div class="tl-item d-flex justify-content-between">
