--- a/index.html
+++ b/index.html
@@ -680,6 +680,7 @@
             <div class="section-kicker mb-2">Not</div>
             <p class="mb-0 muted">
               Basın ve iş birlikleri için e‑posta üzerinden konu başlığını belirtmeniz yanıt süremizi hızlandıracaktır.
+              Bilet satışı için de iletişime geçmeniz gerekmektedir.
             </p>
           </div>
         </div>
