--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
               <div class="tl-time">13:15 - 13:35</div>
             </div>
             <div class="tl-item d-flex justify-content-between">
-              <div class="fw-bold">2. Konuşma - Ahmet Turan Özdemir</div>
+              <div class="fw-bold">2. Konuşma - Coming Soon </div>
               <div class="tl-time">13:40 - 14:00</div>
             </div>
             <div class="tl-item d-flex justify-content-between">
@@ -430,42 +430,22 @@
       <!-- 1: Ahmet Turan Özdemir -->
       <div class="col-lg-6">
         <div class="card-modern speaker-card">
-          <img class="speaker-img" alt="Ahmet Turan Özdemir" src="konusmaci1.jpg">
+          <img class="speaker-img" alt="coming soon" src="konusmaci.jpg">
           <div>
             <div class="speaker-name">
-              <a href="https://www.linkedin.com/in/ahmet-turan-özdemir" target="_blank" class="link-light text-decoration-none">
-                Ahmet Turan Özdemir 🔗
+              <a href="" target="_blank" class="link-light text-decoration-none">
+                Coming Soon 🔗
               </a>
             </div>
-            <div class="speaker-role">Aspilsan Enerji Genel Müdürü / CEO</div>
+            <div class="speaker-role">TEDx Adana Fen'de sizlerle</div>
             <p class="speaker-bio mb-0">
-              Enerji sistemleri, elektronik mühendisliği ve teknoloji yönetimi konularındaki derin tecrübesiyle geleceğin teknolojilerine yön veren isimlerden biridir.
+              ....
             </p>
           </div>
         </div>
       </div>
 
-      <!-- 2: Sabrican Onay Yontar -->
-       <!--
-      <div class="col-lg-6">
-        <div class="card-modern speaker-card">
-          <img class="speaker-img" alt="Sabrican Onay Yontar" src="konusmaci2.jpg">
-          <div>
-            <div class="speaker-name">
-              <a href="https://www.linkedin.com/in/sabrican-onay-yontar" target="_blank" class="link-light text-decoration-none">
-                Sabrican Onay Yontar 🔗
-              </a>
-            </div>
-            <div class="speaker-role">Satranç İçerik Üreticisi</div>
-            <p class="speaker-bio mb-0">
-              İTÜ Uzay Mühendisliği mezunudur. Satranç yayıncılığı ve içerik üretimiyle tanınıyor; Chess.com üzerinden binlerce takipçiye ulaşıyor. (YouTube +330B Abone)
-            </p>
-          </div>
-        </div>
-      </div>
-       -->
-
-      <!-- 3: Prof. Dr. Oğuz Yoldaş -->
+      <!-- 2: Prof. Dr. Oğuz Yoldaş -->
       <div class="col-lg-6">
         <div class="card-modern speaker-card">
           <img class="speaker-img" alt="Prof. Dr. Oğuz Yoldaş" src="konusmaci3.jpg">
@@ -483,7 +463,7 @@
         </div>
       </div>
 
-      <!-- 4: Seda Saygı Aktaş -->
+      <!-- 3: Seda Saygı Aktaş -->
       <div class="col-lg-6">
         <div class="card-modern speaker-card">
           <img class="speaker-img" alt="Seda Saygı Aktaş" src="konusmaci4.jpg">
@@ -501,7 +481,7 @@
         </div>
       </div>
 
-      <!-- 5: İlker Yörü -->
+      <!-- 4: İlker Yörü -->
       <div class="col-lg-6">
         <div class="card-modern speaker-card">
           <img class="speaker-img" alt="İlker Yörü" src="konusmaci5.jpeg">
@@ -519,7 +499,7 @@
         </div>
       </div>
 
-      <!-- 6: Prof. Dr. Orhan Görgülü -->
+      <!-- 5: Prof. Dr. Orhan Görgülü -->
       <div class="col-lg-6">
         <div class="card-modern speaker-card">
           <img class="speaker-img" alt="Prof. Dr. Orhan Görgülü" src="konusmaci6.png">
@@ -537,7 +517,7 @@
         </div>
       </div>
 
-      <!-- 7: Prof. Dr. Mehmet Birhan Yılmaz -->
+      <!-- 6: Prof. Dr. Mehmet Birhan Yılmaz -->
       <div class="col-lg-6">
         <div class="card-modern speaker-card">
           <img class="speaker-img" alt="Prof. Dr. Mehmet Birhan Yılmaz" src="konusmaci7.jpg">
