--- a/index.html
+++ b/index.html
@@ -427,19 +427,19 @@
     <h2 class="section-title mb-4">Sahnedeki isimler</h2>
 
     <div class="row g-3">
-      <!-- 1: Ahmet Turan Özdemir -->
+      <!-- 1: Sercan Güder -->
       <div class="col-lg-6">
         <div class="card-modern speaker-card">
-          <img class="speaker-img" alt="coming soon" src="konusmaci.jpg">
+          <img class="speaker-img" alt="coming soon" src="konusmaci1.jpg">
           <div>
             <div class="speaker-name">
               <a href="" target="_blank" class="link-light text-decoration-none">
-                Coming Soon 🔗
+                Coming Soon ⌛️
               </a>
             </div>
-            <div class="speaker-role">TEDx Adana Fen'de sizlerle</div>
+            <div class="speaker-role">...</div>
             <p class="speaker-bio mb-0">
-              ....
+              TEDx Adana Fen'de sizlerle
             </p>
           </div>
         </div>
