--- a/index.html
+++ b/index.html
@@ -427,19 +427,19 @@
     <h2 class="section-title mb-4">Sahnedeki isimler</h2>
 
     <div class="row g-3">
-      <!-- 1: Sercan Güder -->
+      <!-- 1: Ahmet Turan Özdemir -->
       <div class="col-lg-6">
         <div class="card-modern speaker-card">
-          <img class="speaker-img" alt="coming soon" src="loading.jpg">
+          <img class="speaker-img" alt="Prof. Dr. Ahmet Turan Özdemir" src="konusmaci1.jpeg">
           <div>
             <div class="speaker-name">
               <a href="" target="_blank" class="link-light text-decoration-none">
-                ⌛️ Coming Soon ⌛️
+                Prof. Dr. Ahmet Turan Özdemir
               </a>
             </div>
-            <div class="speaker-role">...</div>
+            <div class="speaker-role">Aspilsan Enerji Genel Müdürü / CEO</div>
             <p class="speaker-bio mb-0">
-              TEDx Adana Fen'de sizlerle
+              Bilkent Üniversitesi Elektrik-Elektronik Mühendisliği mezunu. Enerji teknolojileri vr savunma sanayii alanında 20+ yıl deneyim. Aspilsan Enerji'de lityum-iyon batarya teknolojilerinin geliştirilmesine liderlik ediyor.
             </p>
           </div>
         </div>
