--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
               <div class="tl-time">13:15 - 13:35</div>
             </div>
             <div class="tl-item d-flex justify-content-between">
-              <div class="fw-bold">2. Konuşma - ⌛️ Coming ⌛️</div>
+              <div class="fw-bold">2. Konuşma - Prof. Dr. Ahmet Turan Özdemir</div>
               <div class="tl-time">13:40 - 14:00</div>
             </div>
             <div class="tl-item d-flex justify-content-between">
@@ -630,7 +630,7 @@
     <div class="mt-4">
       <h5 class="text-white fw-bold mb-3">Genel Kadro</h5>
       <p class="muted">
-        Zehra Çaldır - Elif Su Özdemir - Umut Devrim Deveci - Kuzey Çelik - Yusuf Batuhan Gül - İkra Nur Aydın - Alper Kırsay - Sena Önerden - Duru Hirasu Körkün - Buğlem Nisan Ekinci - Yavuz Emin Kaya - Berat Hüseyin Güllü
+        Zehra Çaldır - Elif Su Özdemir - Umut Devrim Deveci - Kuzey Çelik - Yusuf Batuhan Gül - İkra Nur Aydın - Sena Önerden - Duru Hirasu Körkün - Buğlem Nisan Ekinci - Yavuz Emin Kaya - Berat Hüseyin Güllü
       </p>
     </div>
   </div>
