--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
           <img class="speaker-img" alt="Prof. Dr. Ahmet Turan Özdemir" src="konusmaci1.jpeg">
           <div>
             <div class="speaker-name">
-              <a href="" target="_blank" class="link-light text-decoration-none">
+              <a href="https://www.linkedin.com/in/ahmet-turan-ozdemir" target="_blank" class="link-light text-decoration-none">
                 Prof. Dr. Ahmet Turan Özdemir
               </a>
             </div>
